Outliner doesn't display selected object if its parented to something else #65263

Closed
opened 2019-05-29 12:31:49 +02:00 by Vas · 4 comments

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-28 21:07, hash: 9bae9b634e
Worked: 2.79.6

Short description of error
I stumbled upon this minor bug inside outliner with filter set to "Selected" mode, in which case will fail to display an object if it's parented to another one.
This works fine in 2.79b
image.png

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-28 21:07, hash: `9bae9b634e` Worked: 2.79.6 **Short description of error** I stumbled upon this minor bug inside outliner with filter set to "Selected" mode, in which case will fail to display an object if it's parented to another one. This works fine in 2.79b ![image.png](https://archive.blender.org/developer/F7077380/image.png) **Exact steps for others to reproduce the error** - open the attached blend file - select cube "B" [Outliner select.blend](https://archive.blender.org/developer/F7077382/Outliner_select.blend)
Author

Added subscriber: @Alumx

Added subscriber: @Alumx
Dalai Felinto was assigned by Jacques Lucke 2019-05-29 14:52:41 +02:00

For the records this is tricky :/ Had a go at it but no success so far.

For the records this is tricky :/ Had a go at it but no success so far.

This issue was referenced by 40a1c67165

This issue was referenced by 40a1c671655c7583bc6d6e0d339e5033c156028f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65263
No description provided.